<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>260</x>
      <y>180</y>
      <width>166</width>
      <height>191</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLineEdit" name="entradaNumero"/>
     </item>
     <item>
      <widget class="QPushButton" name="btnBinario">
       <property name="text">
        <string>Converter para binario</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btnDecimal">
       <property name="text">
        <string>Converter para decimal</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btnOctal">
       <property name="text">
        <string>Converter para octal</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="labelResultado">
       <property name="text">
        <string>Resultado</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
